spec/e2e/operator/add_bool_nil.lit
true + nil # error: [line 1] Runtime error: Undefined operator + for Bool and Nil.
